RESOLVED FIXED133362
[iOS WebKit2] Sometimes Safari gets into a limbo state after web process crash
https://bugs.webkit.org/show_bug.cgi?id=133362
Summary [iOS WebKit2] Sometimes Safari gets into a limbo state after web process crash
Sam Weinig
Reported 2014-05-28 15:39:38 PDT
[iOS WebKit2] Sometimes Safari gets into a limbo state after web process crash
Attachments
Patch (2.66 KB, patch)
2014-05-28 15:44 PDT, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2014-05-28 15:44:51 PDT
Sam Weinig
Comment 2 2014-05-28 15:55:06 PDT
Note You need to log in before you can comment on or make changes to this bug.