[iOS WebKit2] Sometimes Safari gets into a limbo state after web process crash <rdar://problem/17029526> https://bugs.webkit.org/show_bug.cgi?id=133362

Reviewed by Dan Bernstein.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):
Remove unnecessary initialization of a unique_ptr.

(WebKit::WebPageProxy::reattachToWebProcess):
Move calls to update the view state and activity tokens to after we have swapped in the new process.

(WebKit::WebPageProxy::resetStateAfterProcessExited):
Clear the activity token on process exit.


Canonical link: https://commits.webkit.org/151387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169436 268f45cc-cd09-0410-ab3c-d52691b4dbfc